# dicomplan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml  codeql.yml  lint.yml
dicomplan/: __version__.py  checksum.py  config_parser.py  dicom.py  dicomdump.py  main.py  model.py  spotpattern.py  spots.py
dicomplan/sequences/: dose_reference.py  fraction_group.py  ion_beam.py  ion_control_point.py  ion_tolerance_table.py  patient_setup.py
tests/: test_cli.py  test_image.py
