[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pydicom>=2.3.1",
    "numpy>=1.23.5",
    "Pillow>=9.5.0",
    "matplotlib>=3.7.1",
]
name = "dicomplan"
description = "Create simple DICOM plan for proton therapy facilities."
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]
keywords = ["dicom", "RTPLAN", "radiotherapy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dicomplan*"]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=7.2.1"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]  # pycodestyle + pyflakes, equivalent to flake8 defaults

[tool.yapf]
based_on_style = "pep8"
column_limit = 127

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "dicomplan/__version__.py"
